Update js do index e adicionando visibilidade do botao

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
 
     <script src="./script.js"></script>
-    <script src="./script-crud.js"></script>
+    <script src="./dist/js/script-crud.js"></script>
 
 </body>
 
